Funcionan refrescar,, grabar con nuevo y con put, falta borrar y Css

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,13 @@
             </form>
         </detalle>
 
+        <logUsuario>
 
+            <h2 >Log de usuario</h2>
+
+            <!-- A llenar con log de operaciones-->
+             
+        </logUsuario>
 
     </div>
 
